<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_movie_normal"
        android:title="@string/movie" />

    <item
        android:id="@+id/navigation_tvshow"
        android:icon="@drawable/ic_tvshow_normal"
        android:title="@string/tvshow" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_normal"
        android:title="@string/profile" />

</menu>