...
                android:layout_marginTop="12dp"
                android:text="@string/popular_movies"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSubtitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:paddingStart="0dp"
...
